@@ -101,6 +101,9 @@ Please note that our support for the checkout block is still experimental and th
 
 == Changelog ==
 
+= 2.x.x - 2021-xx-xx =
+* Fix - Error when using SCA / 3DS credit card in checkout block.
+
 = 2.3.0 - 2021-xx-xx =
 * Add - Introduced deposit currency filter for transactions overview page.
 * Add - Download transactions report in CSV.
